<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="78dp"
    tools:context=".TypeofProblem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/scrollview"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="802dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/rowater2" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:padding="18dp"
                android:text="@string/electrician2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:text="@string/plumber2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:text="@string/furniture1" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>